--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="pkRunnerStyles.css"/>
 </head>
 <body>
+<button id="gameOverButton" style="visibility: hidden;">Zacznij ponownie</button>
 <script type="text/javascript" src="pkRunner.js"></script>
 </body>
 </html>
