--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
 <button id="gameOverButton" style="visibility: hidden;">Zacznij ponownie</button>
+<text id="result" style="visibility: hidden;">Your score:</text>
+<text id="score" style="visibility: visible;"></text>
 <script type="text/javascript" src="pkRunner.js"></script>
 </body>
 </html>
